--- a/Coffe_Shop_lib/CoffeeShopLib.csproj
+++ b/Coffe_Shop_lib/CoffeeShopLib.csproj
@@ -36,6 +36,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,21 +49,27 @@
     <Compile Include="Address.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="CustomerRepository.cs" />
+    <Compile Include="IMenuItem.cs" />
     <Compile Include="MenuItem.cs" />
+    <Compile Include="MenuItemAdditions\Cheese.cs" />
+    <Compile Include="MenuItemAdditions\Lettuce.cs" />
+    <Compile Include="MenuItemAdditions\Mayo.cs" />
+    <Compile Include="MenuItemAdditions\MenuItemAddition.cs" />
+    <Compile Include="MenuItemAdditions\Milk.cs" />
+    <Compile Include="MenuItemAdditions\Suggar.cs" />
+    <Compile Include="MenuItemAdditions\Sweetener.cs" />
+    <Compile Include="MenuItemAdditions\Tomato.cs" />
+    <Compile Include="MenuItems\CoffeeDarkRoast.cs" />
     <Compile Include="MenuItems\SandwichWithEggSalad.cs" />
     <Compile Include="MenuItems\SandwichWithRoastedBeef.cs" />
     <Compile Include="MenuItems\SandwichWithBacon.cs" />
-    <Compile Include="MenuItems\CoffeeDoubleDouble.cs" />
-    <Compile Include="MenuItems\CoffeeSugarAndMilk.cs" />
-    <Compile Include="MenuItems\CoffeeDoubleMilk.cs" />
-    <Compile Include="MenuItems\CoffeeWithMilk.cs" />
-    <Compile Include="MenuItems\CoffeeDoubleSugar.cs" />
-    <Compile Include="MenuItems\CoffeeWithSugar.cs" />
     <Compile Include="MenuItems\Coffee.cs" />
+    <Compile Include="MenuItems\Tea.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderItem.cs" />
     <Compile Include="OrderTypeEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
